tests/compile-fail/integration__integration__msg_features__duplicate_script.snap
---
source: tests/integration/msg_features.rs
expression: stderr
---
error: redefinition of script 'script0'
  ┌─ <input>:9:8
  │
8 │ script script0 {}
  │        ------- ...but 'script0' was already defined here
9 │ script script0 {}
  │        ^^^^^^^ this defines a script called 'script0'...


